--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/main.ts",
-        "use": "@vercel/node"
+        "src": "dist/src/main.js",
+        "use": "@vercel/node",
+        "config": {
+          "maxDuration": 10
+        }
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/main.ts",
+        "dest": "dist/src/main.js",
         "methods": ["GET", "POST", "PUT", "DELETE"]
       }
     ]
